added capstone2 link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<p>Aspiring Creative and Full-stack Developer</p>
 						</div>
 						<p>
-							<a href="./SzeResume.docx" download="kennethsze-resume"><span class="glyphicon glyphicon-download-alt"></span> Download Resume</a>
+							<a href="./SzeResume.docx" target="cv"><span class="glyphicon glyphicon-download-alt"></span> Download Resume</a>
 						</p> <!-- download resume -->
 							<hr>		
 					</div> <!-- main column profile xs-12 md-12 -->
@@ -211,10 +211,10 @@
 						</div>
 						
 						<div class="col-xs-6 col-md-6 portfolio-item">
-							<a href="https://kennszeth.github.io/sze-captone-1/" target="_blank">
+							<a href="https://kennszeth.github.io/capstone1--tuitt/" target="_blank">
 							<span class="glyphicon glyphicon-new-window icon-new-window"></span>
 							<div class="item">
-								<img src="./images/capstone1.jpg" class="image-responsive" alt="capstone-1">
+								<img src="./images/capstone1.jpg" class="img-responsive" alt="capstone-1">
 								<div class="overlay">
 									<div class="text">Capstone 1 Project @ Tuitt Coding Bootcamp</div>
 								</div>
@@ -223,10 +223,10 @@
 						</div>
 
 						<div class="col-xs-6 col-md-6 portfolio-item">
-							<a href="https://kennszeth.github.io/sze-captone-1/" target="_blank">
+							<a href="https://pheriperficials.000webhostapp.com/" target="_blank">
 							<span class="glyphicon glyphicon-new-window icon-new-window"></span>
 							<div class="item">
-								<img src="./images/capstone1.jpg" class="image-responsive" alt="capstone-1">
+								<img src="./images/capstone2.jpg" class="img-responsive" alt="capstone-2">
 								<div class="overlay">
 									<div class="text">Capstone 2 Project @ Tuitt Coding Bootcamp</div>
 								</div>
@@ -236,10 +236,10 @@
 
 
 						<div class="col-xs-6 col-md-6 portfolio-item">
-							<a href="https://kennszeth.github.io/sze-captone-1/" target="_blank">
+							<a href="#" target="_blank">
 							<span class="glyphicon glyphicon-new-window icon-new-window"></span>
 							<div class="item">
-								<img src="./images/capstone1.jpg" class="image-responsive" alt="capstone-1">
+								<img src="http://placehold.it/477x350" class="img-responsive" alt="capstone-3">
 								<div class="overlay">
 									<div class="text">Capstone 3 Project @ Tuitt Coding Bootcamp</div>
 								</div>
@@ -248,10 +248,10 @@
 						</div>
 
 						<div class="col-xs-6 col-md-6  portfolio-item">
-							<a href="https://kennszeth.github.io/sze-captone-1/" target="_blank">
+							<a href="#" target="_blank">
 							<span class="glyphicon glyphicon-new-window icon-new-window"></span>
 							<div class="item">
-								<img src="./images/capstone1.jpg" class="image-responsive" alt="capstone-1">
+								<img src="http://placehold.it/477x350" class="img-responsive" alt="capstone-4">
 								<div class="overlay">
 									<div class="text">Future Project @ Tuitt Coding Bootcamp</div>
 								</div>
