--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 				<div class="col-xs-12 col-md-12">
 					<div class="container">
 						<h1>Hello World!</h1>
-						<h1>I'm Kenneth Mendoza Sze</h1>
+						<h2>I'm Kenneth Mendoza Sze</h2>
+						<br>
 						<p>< This is my Web Developer Portofolio ></p>
 					</div> <!-- container banner -->
 				</div> <!-- column banner xs-12 md-12 -->
@@ -167,12 +168,11 @@
 						<div class="col-xs-4 col-md-4 text-center">
 							<h3>Programming Skills</h3>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">mySQL</a></li>
+								<li><a href="#">SQL</a></li>
 								<li><a href="#">HTML 5</a></li>
 								<li><a href="#">CSS 3</a></li>
-								<li><a href="#">C++</a></li>
-								<li><a href="#">Java</a></li>
-								<li><a href="#">VB.net</a></li>
+								<li><a href="#">Php</a></li>
+								<li><a href="#">Laravel</a></li>
 							</ul>	
 						</div>
 
@@ -188,6 +188,7 @@
 							<ul class="nav nav-pills nav-stacked">
 								<li><a href="#">Git</a></li>
 								<li><a href="#">Adobe Photoshop</a></li>
+								<li><a href="#">Sublime Text</a></li>
 							</ul>
 						</div>
 
@@ -218,7 +219,8 @@
 								<div class="overlay">
 									<div class="text">Capstone 1 Project @ Tuitt Coding Bootcamp</div>
 								</div>
-							</div></a>
+							</div>
+							</a>
 							
 						</div>
 
@@ -236,10 +238,10 @@
 
 
 						<div class="col-xs-6 col-md-6 portfolio-item">
-							<a href="#" target="_blank">
+							<a href="https://noobatlol.000webhostapp.com/" target="_blank">
 							<span class="glyphicon glyphicon-new-window icon-new-window"></span>
 							<div class="item">
-								<img src="http://placehold.it/477x350" class="img-responsive" alt="capstone-3">
+								<img src="./images/capstone3.jpg" class="img-responsive" alt="capstone-3">
 								<div class="overlay">
 									<div class="text">Capstone 3 Project @ Tuitt Coding Bootcamp</div>
 								</div>
@@ -315,7 +317,7 @@
 		<footer>
 			<div class="row">
 				<div class="col-xs-12 col-md-12">
-					<p class="text-center">&copy; Kenneth Mendoza Sze</p>
+					<p class="text-center">Kenneth Mendoza Sze &copy; 2017</p>
 				</div>
 			</div>
 		</footer>
